JSAI/error/src/test/resources/base/switch_a008.js
var i = 5;

var s = "";

switch(i) {
	case 5: s = s + "case5";
	default: s = s + "default";
	case 1: s = s + "case1";
}

print(s);
